overlapping title fix

--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -9,6 +9,7 @@
 .page-header__title {
     font-weight: 300;
     margin: 0;
+    line-height: 1.2;
     span {
         font-weight: bold;
     }
